# soen321-project

./: .gitignore  README.md  packet.json  packet0.json  packet1.json  pyproject.toml  session.json  user1.json  user2.json
notebooks/: demo.ipynb
scripts/: alice.py  bob.py  setup_keys.py  tamper_demo.py
src/: README.md  aes.py  app.py  attack_demo.py  chat_demo.py  client.py  demo.py  dh.py  main.py  number_theory.py  rsa.py  secure_messaging.py  server.py  utils.py  websocket.py
src/api/: crypto.py  main.py  schemas.py  store.py
