[project]
name = "soen321-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
